jwt_oauth/src/main/java/com/example/jwt_oauth/payload/error/CustomException.java
package com.example.jwt_oauth.payload.error;

import lombok.Getter;

@Getter
public class CustomException extends RuntimeException{
    
}
